// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header with "go back" button renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  height: 0.875rem;
  width: 0.875rem;
  padding: 0;
  position: relative;
}

.c1:after {
  content: "";
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 200%;
  height: 200%;
  border-radius: 50%;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
}

@media (hover:hover) {
  .c1:hover::after {
    background-color: #F8F8F8;
    opacity: 0.3;
  }
}

@media (hover:none) {
  .c1:active::after {
    background-color: #F8F8F8;
    opacity: 0.3;
  }
}

<header
  className="c0"
  onClick={[Function]}
>
  <button
    aria-label="Return to previous page"
    className="c1"
    data-testid="goBackIcon"
  >
    <svg
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10.3253 13.1518C10.0519 13.4252 9.60867 13.4252 9.33531 13.1518L3.67845 7.49498C3.40508 7.22161 3.40509 6.77839 3.67845 6.50503L9.33531 0.848171C9.60867 0.574804 10.0519 0.574804 10.3253 0.848171C10.5986 1.12154 10.5986 1.56475 10.3253 1.83812L5.16338 7L10.3253 12.1619C10.5986 12.4352 10.5986 12.8785 10.3253 13.1518Z"
        fill="#F8F8F8"
        fillRule="evenodd"
      />
    </svg>
  </button>
</header>
`;

exports[`Header with "go back" button renders correctly as link 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: none;
  height: 0.875rem;
  width: 0.875rem;
  padding: 0;
  position: relative;
}

.c1:after {
  content: "";
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 200%;
  height: 200%;
  border-radius: 50%;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.75rem;
}

@media (hover:hover) {
  .c1:hover::after {
    background-color: #F8F8F8;
    opacity: 0.3;
  }
}

@media (hover:none) {
  .c1:active::after {
    background-color: #F8F8F8;
    opacity: 0.3;
  }
}

<header
  className="c0"
>
  <a
    aria-label="Return to previous page"
    className="c1"
    data-testid="goBackIcon"
    href="/invest"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <svg
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10.3253 13.1518C10.0519 13.4252 9.60867 13.4252 9.33531 13.1518L3.67845 7.49498C3.40508 7.22161 3.40509 6.77839 3.67845 6.50503L9.33531 0.848171C9.60867 0.574804 10.0519 0.574804 10.3253 0.848171C10.5986 1.12154 10.5986 1.56475 10.3253 1.83812L5.16338 7L10.3253 12.1619C10.5986 12.4352 10.5986 12.8785 10.3253 13.1518Z"
        fill="#F8F8F8"
        fillRule="evenodd"
      />
    </svg>
  </a>
</header>
`;
